<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_signup"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:orientation="vertical"
        android:background="@color/topcolor">

        <ImageView
            android:id="@+id/btn_back_signup"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:src="@drawable/backbutton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Inscription"
            android:layout_centerInParent="true"
            android:textSize="25dp"
            android:textColor="@android:color/white"
            android:id="@+id/topTabText"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical"
        android:weightSum="2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/txt_complete_this_form"
            android:textSize="23dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:gravity="center"/>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:weightSum="4"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:text="@string/str_firstname"
                android:textColor="@android:color/white"
                android:layout_marginLeft="30dp"
                android:gravity="bottom"/>
            <EditText
                android:id="@+id/edit_firstname_signup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:background="@drawable/uploadcorneredittext"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColor="@android:color/white"
                android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:text="@string/str_lastname"
                android:textColor="@android:color/white"
                android:layout_marginLeft="30dp"
                android:gravity="bottom"/>
            <EditText
                android:id="@+id/edit_lastname_signup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:background="@drawable/uploadcorneredittext"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColor="@android:color/white"
                android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:text="@string/str_email"
                android:textColor="@android:color/white"
                android:layout_marginLeft="30dp"
                android:gravity="bottom"/>
            <EditText
                android:id="@+id/edit_email_signup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:background="@drawable/uploadcorneredittext"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColor="@android:color/white"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:text="@string/str_password"
                android:textColor="@android:color/white"
                android:layout_marginLeft="30dp"
                android:gravity="bottom" />
            <EditText
                android:id="@+id/edit_pwd_signup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:background="@drawable/uploadcorneredittext"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:maxLines="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.32"
        android:weightSum="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/str_required_field"
            android:textColor="@android:color/white"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:gravity="bottom" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:background="@drawable/uploadcorneredittext"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textSize="12dp"
            android:text="In this way, The user is committed to :
Not post and display videos with a content which can be considered as indecent, pornographic, or in order to"
            android:textColor="@android:color/white"/>

        <CheckBox
            android:id="@+id/checkbox_signup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginLeft="30dp"
            android:text="@string/txt_i_agree_gockel_terms"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/white"/>
        <Button
            android:id="@+id/btn_validate_signup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@drawable/greenbtn_selector"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/str_validate"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>